--- a/css/style-cs17.css
+++ b/css/style-cs17.css
@@ -1,60 +1,11 @@
 @import 'fontello.css';
 
+/*********************************************************************************/
+/* iFrames */
+/*********************************************************************************/
+
 iframe {
 	border: 0;
-}
-
-.mainpage_bg,
-.mainpage2_bg {
-    background-color: black;
-    color: white;
-    font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 20px;
-	overflow: hidden; /* should hide the scroll */
-	margin: 0px;
-}
-
-.header {
-    background-color: #0095dd;
-    
-    padding: 0.5% 2%;
-}
-
-h1 {
-    font-weight: normal;
-    text-align: center;
-    font-size: 2.5rem;
-}
-
-.headerTitle {
-    color: rgba(0, 0, 0, 0); /* The text is hidden */
-    height: 350px;
-    background-image: url("../img-cs17/logo-championnat-header.png");
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.place, .date {
-    font-size: 1.5em;
-}
-
-#footerMainScreen {
-	visibility: hidden;
-}
-
-.right{
-    float: right;
-    position: relative;
-    right:20px;
-}
-
-.left{
-    float: left;
-    height: 100%;
-    position: relative;
-    left:20px;
 }
 
 iframe.glavna
@@ -74,7 +25,99 @@ iframe.glavna2
 	 visibility:hidden;
 	 display:none;
 	 z-index:3;
-}		
+}	
+
+/*********************************************************************************/
+/* Body */
+/*********************************************************************************/
+
+.mainpage_bg,
+.mainpage2_bg {
+    background-color: black;
+    color: white;
+    font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
+	overflow: hidden; /* should hide the scroll */
+	margin: 0px;
+}
+
+/*********************************************************************************/
+/* Layouts */
+/*********************************************************************************/
+
+.right{
+    float: right;
+    position: relative;
+    right:20px;
+}
+
+.left{
+    float: left;
+    height: 100%;
+    position: relative;
+    left:20px;
+}
+
+/*********************************************************************************/
+/* Headers */
+/*********************************************************************************/
+
+.header {
+    background-color:#0095dd;
+    padding: 0.5% 2%;
+}
+
+.header.mainScreen {
+    background-color: #000;
+}
+
+h1 {
+    font-weight: normal;
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+.headerTitle {
+    color: rgba(0, 0, 0, 0); /* The text is hidden */
+    height: 350px;
+    background-image: url("../img-cs17/logo-championnat-header.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.srrc-logo {
+    height:70px;
+    margin-top:25px;
+}
+
+.eventTitle {
+    margin:0;
+    font-size: 2rem;
+}
+
+.competitionName {
+    margin:0;
+    font-size: 2rem;
+}
+
+.heat {
+    margin:0;
+    font-size: 2rem;
+}
+
+/*********************************************************************************/
+/* Heat for qualif */
+/*********************************************************************************/
+
+.place, .date {
+    font-size: 1.5em;
+}
+
+#footerMainScreen {
+	visibility: hidden;
+}	
 
 .floor{ /* OSNOVNI DIV ZA PODJELU NA DVA FLOORA */
     height: 98%;
@@ -100,7 +143,6 @@ iframe.glavna2
     display:table; /* Parent div, pozicija: relative, radi centriranja broja (poz. absolute) */
     height:90%;
     width:100%;
-    font-weight:700;
 }			
 
 .tablica_floor.oneF { /* DIV u koji se smješta tablica za lijevi ili desni par, kad je samo jedan podij */
@@ -126,9 +168,34 @@ iframe.glavna2
     height: 5.0rem;
 }
 
+.pairNo {
+    font-size:4.5rem;
+    /*border-color: #f00;
+    border-width: 2.0;
+    border-style: solid;*/
+    margin:0rem 0rem 1rem 0rem;
+}
+
+.pairName {
+    font-size:3.0rem;
+    margin:0;
+    margin:0rem 0rem 0.5rem 0rem;
+}
+
+.pairCountry {
+    font-size:2.0rem;
+    margin:0;
+    margin:0rem 0rem 0.5rem 0rem;
+}
+
+.pairResult {
+    font-size: 3.0rem;
+    margin:0;
+}
+
 .marks > ul li, .marks.two > ul li {
     display: inline-block;
-    font-size: 0.850rem;
+    font-size: 2.0rem;
 }
 
 .marks > ul li:last-child{
@@ -140,4 +207,18 @@ iframe.glavna2
 .marks > ul li i{
     display: block;
     padding-bottom: 0.500rem;
+}
+
+.icon-ok {
+    color: #0095dd;
+}
+
+/*********************************************************************************/
+/* tmp */
+/*********************************************************************************/
+
+.border {
+    border-color: #f00;
+    border-width: 2.0;
+    border-style: solid;
 }
