--- a/css/style-cs17.css
+++ b/css/style-cs17.css
@@ -219,6 +219,44 @@ h1 {
 }
 
 /*********************************************************************************/
+/* njs */
+/*********************************************************************************/
+
+table {
+	vertical-align: baseline;
+    
+	border-collapse: collapse;
+	border-spacing: 0;
+    border: 2px solid #0095dd;
+    
+	margin: 2rem auto;
+    width: 90%;
+
+	font-size: 1.5em;
+}
+
+tr.tableInfo {
+    font-weight: 550;
+    text-align: center;
+    
+    background-color:#0095dd;
+    height: 3.5rem;
+}
+
+tr.tableInfo td{
+    vertical-align: middle;
+}
+
+tr.tableRows {
+    height: 5.0rem;
+    border-bottom: 1px solid gray;
+}
+
+tr.tableRows td {
+    border: 0px;
+}
+
+/*********************************************************************************/
 /* tmp */
 /*********************************************************************************/
 
