--- a/css/style-cs17.css
+++ b/css/style-cs17.css
@@ -257,6 +257,81 @@ tr.tableRows td {
 }
 
 /*********************************************************************************/
+/* proglasenje (podiums) */
+/*********************************************************************************/
+
+.pairOne{   /* OSNOVNO - 5 PAROVA NA EKRANU */
+    display: inline-block;
+    float: left;
+    height: 50%;
+    width:99.33%;
+    margin: 2rem 0rem 2rem 0rem;
+}
+
+.pairTwo{
+    display: inline-block;
+    float: left;
+    height: 50%;
+    margin-left: 16.67%;
+    width:33.33%;
+}
+
+.pairThree{
+    display: inline-block;
+    float: left;
+    height: 50%;
+    margin: 0 auto;
+    width:33.33%;
+}
+
+.pairWinerOne,
+.pairWinerTwo,
+.pairWinerThree {
+	border-style: solid;
+    border-width: 1px 4px 4px 1px;
+	border-color:rgba(0,0,0,0.5);
+	border-radius:1.8rem;
+    font-size: 3.000rem;
+    margin-bottom: 1rem;
+    color:#FFF;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.8);
+
+}
+
+.pairWinerOne{
+    margin-left:30%;
+	width:40%;
+    background: -webkit-gradient(linear, left left, left right, from(#FFD700), to(#DAA520));
+    background-image: -webkit-linear-gradient(left, #FFD700, #DAA520, #DAA520,  #FFD700);
+    background-image: -moz-linear-gradient(left, #FFD700, #DAA520, #DAA520,  #FFD700);
+    background-image: -ms-linear-gradient(left, #FFD700, #DAA520, #DAA520,  #FFD700);
+    background-image: -o-linear-gradient(left, #FFD700, #DAA520, #DAA520,  #FFD700);
+    background-image: linear-gradient(to left, #FFD700, #DAA520, #DAA520,  #FFD700);
+}
+
+.pairWinerTwo{
+	margin-left:10%;
+	width:80%;
+    background: -webkit-gradient(linear, left left, left right, from(#FFD700), to(#DAA520));
+    background-image: -webkit-linear-gradient(left, #F5F5F5, #C0C0C0, #C0C0C0,  #F5F5F5);
+    background-image: -moz-linear-gradient(left, #F5F5F5, #C0C0C0, #C0C0C0,  #F5F5F5);
+    background-image: -ms-linear-gradient(left, #F5F5F5, #C0C0C0, #C0C0C0,  #F5F5F5);
+    background-image: -o-linear-gradient(left, #F5F5F5, #C0C0C0, #C0C0C0,  #F5F5F5);
+    background-image: linear-gradient(to left, #F5F5F5, #C0C0C0, #C0C0C0,  #F5F5F5);
+}
+
+.pairWinerThree{
+	margin-left:10%;
+	width:80%;
+    background: -webkit-gradient(linear, left left, left right, from(#FFD700), to(#DAA520));
+    background-image: -webkit-linear-gradient(left, #FFE4B5, #CD853F, #CD853F,  #FFE4B5);
+    background-image: -moz-linear-gradient(left, #FFE4B5, #CD853F, #CD853F,  #FFE4B5);
+    background-image: -ms-linear-gradient(left, #FFE4B5, #CD853F, #CD853F,  #FFE4B5);
+    background-image: -o-linear-gradient(left, #FFE4B5, #CD853F, #CD853F,  #FFE4B5);
+    background-image: linear-gradient(to left, #FFE4B5, #CD853F, #CD853F,  #FFE4B5);
+}
+
+/*********************************************************************************/
 /* tmp */
 /*********************************************************************************/
 
