Configure the pages teve6 and teve8 to display result by 6 or 8 participants

--- a/css/style-cs17.css
+++ b/css/style-cs17.css
@@ -253,6 +253,11 @@ tr.tableRows {
     border-bottom: 1px solid gray;
 }
 
+tr.tableRows8 {
+    height: 3.6rem;
+    border-bottom: 1px solid gray;
+}
+
 tr.tableRows td {
     border: 0px;
 }
