--- a/css/style-cs17.css
+++ b/css/style-cs17.css
@@ -164,7 +164,7 @@ h1 {
     border-color: #fff;
 
     border-style: solid;
-    border-width: 1px 3px 3px 1px;
+    border-width: 1px;
 	border-radius:2.000rem;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -174,11 +174,18 @@ h1 {
     height: 5.0rem;
 }
 
+.pairPlace.yellow { /* Yellow card  */
+    color:#404040;
+   background:#FF3;
+}
+
+.pairPlace.red{ /* Red card */
+	color:#FFF;
+	background:#C00;
+}
+
 .pairNo {
     font-size:3.0rem;
-    /*border-color: #f00;
-    border-width: 2.0;
-    border-style: solid;*/
     margin:0rem 0rem 1rem 0rem;
 }
 
@@ -188,15 +195,27 @@ h1 {
     margin:1rem 0rem 0.5rem 0rem;
 }
 
+.pairName.one {
+    font-size:3.0rem;
+}
+
 .pairCountry {
     font-size:1.5rem;
     margin:0;
     margin:0rem 0rem 0.5rem 0rem;
 }
 
+.pairCountry.one {
+    font-size: 2rem;
+}
+
 .pairResult {
-    font-size: 3.0rem;
+    font-size: 2.5rem;
     margin:0;
+}
+
+.pairResult.one {
+    font-size: 3rem;
 }
 
 .marks > ul li, .marks.two > ul li {
