--- a/css/style-cs18.css
+++ b/css/style-cs18.css
@@ -106,6 +106,27 @@ h1 {
 }
 
 /*********************************************************************************/
+/* Footer */
+/*********************************************************************************/
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #e84351;
+    color:#FFF;
+    text-align: center;
+    height: 70px;
+  }
+
+  .footer-logo {
+      height:60px;
+      margin-top:12px;
+  }
+
+/*********************************************************************************/
 /* Heat for qualif */
 /*********************************************************************************/
 
